--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-index.html
+<!doctype html>
+<html lang="es">
+	<head>
+		<meta charset="utf-8"/>
+		<title>Puls4</title>
+		<link rel="stylesheet" href="css/puls4.css"/>
+	</head>
+	<body>
+		<header></header>
+		<nav>
+			
+		</nav>
+		<section>
+			
+		</section>
+		<footer>
+			
+		</footer>
+
+
+	</body>
+</html>
