--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
 		<link rel="stylesheet" href="css/puls4.css"/>
 	</head>
 	<body>
-		<header></header>
+		<header>
+			<div class="logo">
+				<img src="imagenes/logo.png" alt="Puls4"/>
+			</div>
+			<div class="titular">
+				<h1 class="titulo">
+					Puls4: Comunidad profesional
+				</h1>
+				<div class="filtro">
+					<a href="#">Responsive Design</a>
+					<a href="#">Publicar</a>
+				</div>
+			</div>
+			<div class="usuario">
+				<figure class="avatar">
+					<img src="imagenes/avatar.jpg" alt="Nico">
+				</figure>
+				<a href="#" class="flechita">X</a>
+			</div>
+		</header>
 		<nav>
-			
+			<ul class="menu">
+				<li><a href="#">Python</a></li>
+				<li><a href="#">HTML5</a></li>
+				<li><a href="#">Javascript</a></li>
+				<li><a href="#">Django</a></li>
+				<li><a href="#">CSS3</a></li>
+			</ul>
 		</nav>
 		<section>
 			
 		</section>
 		<footer>
+			<h3>
+				<strong>Powered by Platzi</strong>
+				<span clas="mejor"> mejorando.la 2013</span>
+			</h3>
 			
 		</footer>
 
